# utilwin

./: .gitignore  INSTALL.md  NOTICE  README.md  install.bat  xmake.lua
cfg/: Microsoft.Cpp.Win32.user.props  Microsoft.Cpp.x64.user.props  README.md  vcpkg.user.props  vcpkg.user.targets
gnulib/bfd/: .gitignore  Makefile.w32  gen.sh
gnulib/readline/: .gitignore  Makefile.w32  gen.sh  readline82.patch
inc_win/: minipeb.h  simpcom.h  sizes.h  sizes2.h
inc_win/ndk/: cctypes.h  cmfuncs.h  cmtypes.h  dbgkfuncs.h  exfuncs.h  extypes.h  halfuncs.h  iofuncs.h  iotypes.h  kefuncs.h  ketypes.h  ldrfuncs.h  ldrtypes.h  lpcfuncs.h  lpctypes.h  mmfuncs.h  mmtypes.h  ntndk.h  obfuncs.h  obtypes.h  peb_teb.h  pofuncs.h  potypes.h  psfuncs.h  pstypes.h  rtlfuncs.h  rtltypes.h  sefuncs.h  setypes.h  umfuncs.h  umtypes.h
inc_win/phnt/: ntpebteb.h  ntpsapi.h  ntrtl.h  phnt.h  phnt_ntdef.h  phnt_windows.h
inc_win/wrksdk/: diskguid.h  evntrace.h  nt.h  (+14 more)
notes/: ndk5.rar  nt_research.txt  reinst.md
src/: CMakeLists.txt  CMakeSettings.json
src/__make/: Makefile  __build.h  __ntenv.h
src/dirent/: __dirent.h  closedir.c  dirfd.c  fdopendir.c  opendir.c  readdir.c  readdir_r.c  rewinddir.c  scandir.c
src/include/: _muslfix.h  dirent.h  fnmatch.h  glob.h  regex.h
src/misc/: errlist.c  fmt.c  getopt.c  getopt1.c
src/process/: disasmlen.c  disasmlen.h  force_utf8.c  fork.c  gettid.c  repliat.c  sleep.c  socketpair.c  unistd_uw.h
src/regex/: fnmatch.c  glob.c  regcomp.c  regexec.c  tre-mem.c  tre.h
src/win32u/: args.c  convbuf.c  u_files.c  u_psapi.c  win32_u.h  win32u_int.h
(+13 files in other folders)
